--- a/config.json
+++ b/config.json
@@ -9,11 +9,11 @@
             "enabled": "1"
         },
         "Filmpertutti": {
-            "url": "https://filmpertutti.motorcycles",
+            "url": "https://filmpertutti.be",
             "enabled": "1"
         },
         "Tantifilm": {
-            "url": "https://www.tanti.bond",
+            "url": "https://www.tantifilm.living",
             "TF_ForwardProxy": "0",
             "TF_PROXY": "1",
             "enabled": "1"
@@ -48,7 +48,7 @@
             "enabled": "1"
         },
         "Guardaserie": {
-            "url": "https://guardaserietv.mom",
+            "url": "https://guardaserietv.now",
             "enabled": "1",
             "GS_ForwardProxy": "0",
             "GS_PROXY": "1"
@@ -72,7 +72,7 @@
             "AW_PROXY": "1"
         },
         "SkyStreaming": {
-            "url": "https://skystreaming.directory",
+            "url": "https://skystreaming.blog",
             "enabled": "1"
         },
         "DaddyLiveHD": {
