--- a/config.json
+++ b/config.json
@@ -1,7 +1,7 @@
 {
     "Siti": {
         "StreamingCommunity": {
-            "url": "https://streamingcommunity.luxe",
+            "url": "https://streamingunity.to",
             "SC_ForwardProxy": "0",
             "SC_PROXY": "0",
             "VX_ForwardProxy": "0",
@@ -9,11 +9,11 @@
             "enabled": "1"
         },
         "Filmpertutti": {
-            "url": "https://filmpertutti.be",
+            "url": "https://filmpertutti.motorcycles",
             "enabled": "1"
         },
         "Tantifilm": {
-            "url": "https://www.tantifilm.living",
+            "url": "https://www.tanti.bond",
             "TF_ForwardProxy": "0",
             "TF_PROXY": "1",
             "enabled": "1"
@@ -30,7 +30,7 @@
             "enabled": "1"
         },
         "CB01": {
-            "url": "https://cb01net.org",
+            "url": "https://cb01net.download",
             "CB_PROXY": "1",
             "CB_ForwardProxy": "0",
             "MX_ForwardProxy": "0",
@@ -48,7 +48,7 @@
             "enabled": "1"
         },
         "Guardaserie": {
-            "url": "https://guardaserietv.now",
+            "url": "https://guardaserietv.blog",
             "enabled": "1",
             "GS_ForwardProxy": "0",
             "GS_PROXY": "1"
@@ -72,11 +72,11 @@
             "AW_PROXY": "1"
         },
         "SkyStreaming": {
-            "url": "https://skystreaming.blog",
+            "url": "https://skystreaming.stream",
             "enabled": "1"
         },
         "DaddyLiveHD": {
-            "url": "https://daddylive.mp",
+            "url": "https://daddylive.dad",
             "enabled": "1"
         }
     },
@@ -91,4 +91,3 @@
         "Global_Proxy": "0"
     }
 }
-  
